--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -10,25 +10,7 @@ html {
   box-sizing: inherit;
 }
 
-.container {
-  max-width: 1096px;
-  margin: auto;
-}
-
-.container-padding {
-  padding: 0 4vw;
-}
 
 main {
   flex-grow: 1;
-}
-
-/* ignores ancestors' horizontal constraints */
-.full-width {
-  width: 100vw;
-  position: relative;
-  left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
 }
